// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssociatedSegmentsCard should render 1`] = `
<div>
  <div
    class="card card-root associated-segments-card-root"
    style="min-height: 452px;"
  >
    <div
      class="card-header"
    >
      <div
        class="card-title"
      >
        Associated Segments
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item"
        >
          <input
            class="input-root form-control input-group-inset input-group-inset-after"
            placeholder="Search"
            type="text"
            value=""
          />
          <div
            class="input-group-inset-item input-group-inset-item-after"
          >
            <button
              aria-label="Search"
              class="button-root btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-search icon-root"
                role="presentation"
              >
                <use
                  href="#search"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="entity-list-root"
      >
        <ul
          class="list-group list-group-root show-quick-actions-on-hover"
        >
          <li
            class="list-group-item list-group-item-flex"
          >
            <div
              class="autofit-col"
            >
              <div
                class="sticker sticker-root sticker-static sticker-rounded sticker-primary"
              >
                <svg
                  class="lexicon-icon lexicon-icon-individual_dynamic_segment icon-root"
                  role="presentation"
                >
                  <use
                    href="#individual_dynamic_segment"
                  />
                </svg>
              </div>
            </div>
            <div
              class="autofit-col justify-content-center autofit-col-expand"
            >
              <span
                class="text-truncate"
                data-tooltip="false"
                title=""
              >
                <strong>
                  <a
                    class="list-group-link"
                    href="/workspace/23/contacts/segments/0"
                  >
                    Seattle0
                  </a>
                </strong>
              </span>
              <div
                class="secondary-info"
              />
            </div>
          </li>
          <li
            class="list-group-item list-group-item-flex"
          >
            <div
              class="autofit-col"
            >
              <div
                class="sticker sticker-root sticker-static sticker-rounded sticker-primary"
              >
                <svg
                  class="lexicon-icon lexicon-icon-individual_dynamic_segment icon-root"
                  role="presentation"
                >
                  <use
                    href="#individual_dynamic_segment"
                  />
                </svg>
              </div>
            </div>
            <div
              class="autofit-col justify-content-center autofit-col-expand"
            >
              <span
                class="text-truncate"
                data-tooltip="false"
                title=""
              >
                <strong>
                  <a
                    class="list-group-link"
                    href="/workspace/23/contacts/segments/1"
                  >
                    Seattle1
                  </a>
                </strong>
              </span>
              <div
                class="secondary-info"
              />
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="card-footer"
    >
      <a
        class="button-root btn btn-outline-borderless btn-sm btn-outline-secondary"
        href="/foo"
      >
        View All Segments
        <svg
          class="lexicon-icon lexicon-icon-angle-right-small icon-root ml-2"
          role="presentation"
        >
          <use
            href="#angle-right-small"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`AssociatedSegmentsCard should render with an no results display 1`] = `
<div>
  <div
    class="card card-root associated-segments-card-root"
    style="min-height: 452px;"
  >
    <div
      class="card-header"
    >
      <div
        class="card-title"
      >
        Associated Segments
      </div>
    </div>
    <div
      class="card-body"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item"
        >
          <input
            class="input-root form-control input-group-inset input-group-inset-after"
            placeholder="Search"
            type="text"
            value=""
          />
          <div
            class="input-group-inset-item input-group-inset-item-after"
          >
            <button
              aria-label="Search"
              class="button-root btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-search icon-root"
                role="presentation"
              >
                <use
                  href="#search"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="no-results-root flex-grow-1"
      >
        <div
          class="no-results-content"
        >
          <div
            class="h4 no-results-title"
          >
            There are no items found.
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-footer"
    >
      <a
        class="button-root btn btn-outline-borderless btn-sm btn-outline-secondary"
        href="/foo"
      >
        View All Segments
        <svg
          class="lexicon-icon lexicon-icon-angle-right-small icon-root ml-2"
          role="presentation"
        >
          <use
            href="#angle-right-small"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;
